objects/LLC_BI__Legal_Entities__c.object
<CustomObject>
    <description>The Entity Involvement object contains information about the associations between relationships and loans.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <description>Associates the Entity with a Relationship or Account by lookup</description>
        <label>Relationship Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Legal_Entities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>LLC_BI__Address__c</fullName>
        <description>Address for this Entity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Borrower_Type__c</fullName>
        <description>Typical borrower types will include borrower, co-borrower, guarantor, limited guarantor.  Value provided must match one of the values in the Type pick list established for this organization.</description>
        <label>Borrower Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Limited Guarantor</fullName>
                </value>
                <value>
                    <fullName>Co-Borrower</fullName>
                </value>
                <value>
                    <fullName>Related Entity</fullName>
                </value>
                <value>
                    <fullName>Grantor</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Contingent_Amount__c</fullName>
        <description>Amount of Contingent Liability.</description>
        <label>Contingent Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contingent_Type__c</fullName>
        <description>This field is required. It is manually populated when creating an entity involvement. It describes the type guarantee: Joint &amp; Several - the financial institution could be awarded damages and collect from any one, several, or all of the liable parties; Pro Rata - responsibility for payment of facility is proportional among all the guarantors; Assign Specific - payment of a facility is a set specific dollar amount or percentage amount.</description>
        <label>Contingent Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Joint &amp; Several</fullName>
                    <default>true</default>
                    <label>Joint &amp; Several</label>
                </value>
                <value>
                    <fullName>Pro Rata</fullName>
                </value>
                <value>
                    <fullName>Assign Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. This field is populated as part of the new deposit workflow. This field specifies the deposit associated with the entity involvement. By also associating the entity involvement to a relationship, it allows a user to associate a deposit and relationship together.</description>
        <label>Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Entity Involvements</relationshipLabel>
        <relationshipName>Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Entity_Type__c</fullName>
        <description>Typical Entity  types will  include Operating Company, Sole Proprietorship, EPC, Individual.  Value provided must match one of the values in the Entity Type pick list established for this organization.</description>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Operating Company</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude_From_Account_Exposure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--DEPRECATED-- The user manually selects this optional field. When true, it excludes loan exposure from the relationship. When false, it does not.</description>
        <label>-D Exclude From Account Exposure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude_From_Product_Package_Exposure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>--DEPRECATED-- The user manually selects this optional field. When true, it excludes loan exposure from the product package. When false, it does not.</description>
        <label>-D Exclude From Product Package Exposure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantee_Effective_Date__c</fullName>
        <description>This field is optional. The user manually populates this field. The date which a guarantee becomes effective. Typically, it is the date the facility funds.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Guarantee Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantee_End_Date__c</fullName>
        <description>This field is optional. The user manually populates this field. It is the date which a guarantee ends. By default, this should be when repayment of a facility is satisfied.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Guarantee End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guarantee_Limit__c</fullName>
        <description>This field is optional. The user manually populates this field. It is the fixed dollar amount of a limited guarantee.</description>
        <label>Limited Guarantee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Guaranty_Amount__c</fullName>
        <description>This field is optional. The user manually populates this field. This value specifices a type of guarantee in less specific terms than Contingent Type.</description>
        <label>Guarantee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
                <value>
                    <fullName>Amount of Note</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Applicant_Type__c</fullName>
        <description>The HMDA applicant type.</description>
        <inlineHelpText>The HMDA applicant type.</inlineHelpText>
        <label>HMDA Applicant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Co-Applicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Ethnicity__c</fullName>
        <description>This field is optional. The user manually populates this field on the HMDA page. This field stores the ethnicty of the applicant.</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Code 2—Not Hispanic or Latino</fullName>
                </value>
                <value>
                    <fullName>Code 3—Information not provided by applicant in mail, internet, or telephone application</fullName>
                </value>
                <value>
                    <fullName>Code 4—Not applicable</fullName>
                </value>
                <value>
                    <fullName>Code 5—No co-applicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Income__c</fullName>
        <description>This field is optional. The user manually populates this field on the HMDA page. This field stores the income of the applicant.</description>
        <label>Income of Applicant (In Thousands)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Not_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. The user manually populates this field on the HMDA page. If enabled, the applicant does not have to enter other HMDA information. When disabled, other HMDA information is requested, but not required, of the applicant. This field is disabled by default.</description>
        <label>I do not wish to supply this information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Race__c</fullName>
        <description>This field is optional. The user manually populates this field on the HMDA page. This field stores the race of the applicant.</description>
        <label>Race - May select up to five</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—American Indian or Alaska Native</fullName>
                </value>
                <value>
                    <fullName>Code 2—Asian</fullName>
                </value>
                <value>
                    <fullName>Code 3—Black or African American</fullName>
                </value>
                <value>
                    <fullName>Code 4—Native Hawaiian/Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Code 5—White</fullName>
                </value>
                <value>
                    <fullName>Code 6—Info not pro­vided by applicant</fullName>
                </value>
                <value>
                    <fullName>Code 7—Not applicable</fullName>
                </value>
                <value>
                    <fullName>Code 8—No co-applicant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__HMDA_Sex__c</fullName>
        <description>This field is optional. The user manually populates this field on the HMDA page. This field stores the sex of the applicant.</description>
        <label>Sex of the Applicant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code 1—Male</fullName>
                </value>
                <value>
                    <fullName>Code 2—Female</fullName>
                </value>
                <value>
                    <fullName>Code 3—Information not provided by applicant in mail, internet, or telephone application</fullName>
                </value>
                <value>
                    <fullName>Code 4—Not applicable</fullName>
                </value>
                <value>
                    <fullName>Code 5—No co-applicant or co-borrower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Borrower__c</fullName>
        <description>This field is optional. It automatically populates based on the selection in the LLC_BI__Borrower_Type__c field. It indicates if the record denotes a borrower.</description>
        <formula>IF((ISPICKVAL(LLC_BI__Borrower_Type__c, &apos;Borrower&apos;)) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Borrower</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_CoBorrower__c</fullName>
        <description>This field is optional. It automatically populates based on the selection in the LLC_BI__Borrower_Type__c field. It indicates if the record denotes a co-borrower.</description>
        <formula>IF((ISPICKVAL(LLC_BI__Borrower_Type__c, &apos;Co-Borrower&apos;)) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is CoBorrower</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Grantor__c</fullName>
        <description>This field is optional. It automatically populates based on the selection in the LLC_BI__Borrower_Type__c field. It indicates if the record denotes a grantor</description>
        <formula>IF((ISPICKVAL(LLC_BI__Borrower_Type__c, &apos;Grantor&apos;)) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Grantor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Guarantor__c</fullName>
        <description>This field is optional. It automatically populates based on the selection in the LLC_BI__Borrower_Type__c field. It indicates if the record denotes a guarantor.</description>
        <formula>IF(OR(ISPICKVAL(LLC_BI__Borrower_Type__c, &apos;Guarantor&apos;),ISPICKVAL(LLC_BI__Borrower_Type__c, &apos;Limited Guarantor&apos;)) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Guarantor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Included_In_Global_Analysis__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field sets whether an entity is displayed in global analysis within spreads.</description>
        <inlineHelpText>This field sets whether an entity is displayed in global analysis within spreads.</inlineHelpText>
        <label>Is Included in Global Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Related_Entity__c</fullName>
        <description>This field is optional. It automatically populates based on the selection in the LLC_BI__Borrower_Type__c field. It indicates if the record denotes a related entity</description>
        <formula>IF((ISPICKVAL(LLC_BI__Borrower_Type__c, &apos;Related Entity&apos;)) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Related Entity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Limited_Guaranty_Amount__c</fullName>
        <description>This field has been deprecated.</description>
        <formula>IF(
ISPICKVAL(LLC_BI__Guaranty_Amount__c, &quot;Limited&quot;),
LLC_BI__Ownership__c * LLC_BI__Loan__r.LLC_BI__Amount__c,
0.00
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>-D Limited Guaranty Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It can be manually populated from a Collateral record. This field specifies the collateral associated with the entity involvement. It is not typically used.</description>
        <inlineHelpText>The collateral that the legal entity is associated with.</inlineHelpText>
        <label>Loan Collateral</label>
        <referenceTo>LLC_BI__Loan_Collateral__c</referenceTo>
        <relationshipName>Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates Entity with a specific loan by lookup</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipName>Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Debt_Service__c</fullName>
        <description>This field is optional. It automatically populates by the debt schedule in the spreading application. It stores monthly debt service, which is used within the spreading application to determine the annual debt service.</description>
        <label>Monthly Debt Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Notes__c</fullName>
        <description>Text area used to enter notes about the Entity</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership__c</fullName>
        <description>Percentage of Contingent Liability</description>
        <label>Contingent Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It automatically populates when creating entity involvement from the product package. This field specifies the product package associated with the entity involvement. By also associating the entity involvement to a relationship, it allows a user to associate a product package and relationship together.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Entity Involvements</relationshipLabel>
        <relationshipName>Entity_Involvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Realestate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox used to show if the legal Entity has real estate.  If the Legal Entity Type is an EPC, check Legal Entity.</description>
        <inlineHelpText>Check box if the legal entity has realestate. Check this box if the Legal Entity Type is EPC</inlineHelpText>
        <label>Realestate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Type__c</fullName>
        <description>Describes relationship ownership for Deposit account types.</description>
        <label>Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Owner</fullName>
                </value>
                <value>
                    <fullName>Secondary Owner</fullName>
                </value>
                <value>
                    <fullName>Joint Owner</fullName>
                </value>
                <value>
                    <fullName>Deposit Household</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Route_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional lookup field with the route agreement id associated with the legal entity.</description>
        <label>Route Agreement</label>
        <referenceTo>nFORCE__Route_Agreement__c</referenceTo>
        <relationshipLabel>Entity Involvements</relationshipLabel>
        <relationshipName>Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Tax_ID__c</fullName>
        <description>Tax ID or SSN for this Entity</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter Tax ID. It does not have to include dashes.</inlineHelpText>
        <label>Tax ID or SSN -D</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. It automatically populates when a user creates an entity involvement from a treasury service. It is also populated when a user creates a new treasury service from a relationship. This field specifies the treasury service associated with the entity involvement. By also associating the entity involvement to a relationship, it allows a user to associate a treasury service and relationship together.</description>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Entity Involvements</relationshipLabel>
        <relationshipName>Entity_Involvements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PL_Loan_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>PL Loan ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Entity Involvement</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Involvements</pluralLabel>
    <recordTypes>
        <fullName>LLC_BI__Deposit_Involvement</fullName>
        <active>true</active>
        <label>Deposit Involvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Loan_Involvement</fullName>
        <active>true</active>
        <label>Loan Involvement</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Contingent_Amount_Exceeds_Loan_Amount</fullName>
        <active>true</active>
        <description>Ensures the contingent amount does not exceed the loan amount.</description>
        <errorConditionFormula>LLC_BI__Contingent_Amount__c &gt; LLC_BI__Loan__r.LLC_BI__Amount__c</errorConditionFormula>
        <errorDisplayField>LLC_BI__Contingent_Amount__c</errorDisplayField>
        <errorMessage>Contingent amount cannot exceed the loan amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Contingent_Amount_Less_Than_0</fullName>
        <active>true</active>
        <description>Contingent Amount a negative value.</description>
        <errorConditionFormula>LLC_BI__Contingent_Amount__c &lt; 0</errorConditionFormula>
        <errorMessage>Contingent Amount must be greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Contingent_Amount_and_Contingent_Percent</fullName>
        <active>true</active>
        <description>Only one field can be used to calculate contingent guarantee. Please specify either amount or percentage before saving.</description>
        <errorConditionFormula>( LLC_BI__Contingent_Amount__c &gt; 0 &amp;&amp;  LLC_BI__Ownership__c &gt; 0) &amp;&amp;
(!CONTAINS(TEXT(LLC_BI__Borrower_Type__c) , &apos;Household&apos;))</errorConditionFormula>
        <errorMessage>Only one field can be used to calculate contingent guarantee. Please specify either amount or percentage before saving.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__HMDA_Demographic</fullName>
        <active>false</active>
        <description>--DEPRECATED--</description>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>--DEPRECATED--</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Ownership_Less_Than_0</fullName>
        <active>true</active>
        <description>Contingent Percentage must be greater than 0.</description>
        <errorConditionFormula>LLC_BI__Ownership__c &lt; 0</errorConditionFormula>
        <errorMessage>Contingent Percentage must be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>